--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
                     android:id="@+id/ToolbarImage"
                     android:layout_width="110dp"
                     android:layout_height="42dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/toolbar"/>
 
             </androidx.appcompat.widget.Toolbar>
 
