Make an unit testing with Mockito, and make a repository using RemoteDataSource.kt with repository testing

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- Change searchbarcolor -->
+        <item name="android:editTextColor">@color/yellow_pop</item>
+        <item name="android:textColorHint">@color/yellow_pop</item>
     </style>
 </resources>
