--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -11,6 +11,22 @@
     android:background="@color/primary"
     tools:context=".ui.movie.MovieFragment">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/Search"
+        android:layout_width="220dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/ic_background_search"
+        android:textColorHint= "@color/yellow_pop"
+        android:editTextColor="@color/yellow_pop"
+        app:closeIcon="@drawable/ic_close"
+        app:searchHintIcon="@drawable/ic_search"
+        app:searchIcon="@drawable/ic_search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="search them!" />
+
     <TextView
         android:id="@+id/tv_feature"
         android:layout_width="match_parent"
@@ -18,8 +34,8 @@
         android:text="@string/featured_movie"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -32,26 +48,15 @@
         app:layout_constraintTop_toBottomOf="@id/tv_feature"
         tools:listitem="@layout/item_list_container" />
 
-    <TextView
-        android:id="@+id/words"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:text="Get the cinema into your phone"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_card"/>
-
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="350dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
