--- a/app/src/main/res/layout/fragment_tvshow.xml
+++ b/app/src/main/res/layout/fragment_tvshow.xml
@@ -37,9 +37,8 @@
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             tools:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="350dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
